### FROM LASTEST FULL RELEASE ###
### ADDED ###
In main.py:
    Sentence Interpretation Testing [2022-02-17]
    What can you do section [2022-02-17]
    More generalized words (adioses, yes) [2022-02-17]
    Different exit sequence by saying an adios [2022-02-17]

In calculator.py:
    Error message display [2022-02-17]

In User.py:
    Added setUsername() function [2022-02-17]

### CHANGED ###
In main.py:
    Login variables are deleted when no longer in use [2022-02-17]
    Error display system now shows the line of the error and what file it was in [2022-2-17]

### DEPRECATED ###

### REMOVED ###

### FIXED ###

### SECURITY ###
In main.py:
    Prevented user from making username with no characters [2022-02-17]
    Prevented user from having username with no character by manually changing file [2022-02-17]