@@ -5,6 +5,7 @@ In main.py:
     What can you do section [2022-02-17]
     More generalized words (adioses, yes) [2022-02-17]
     Different exit sequence by saying an adios [2022-02-17]
+    Installing dependencies area [2022-02-24]
 
 In calculator.py:
     Error message display [2022-02-17]
